[project]
name = "custom-search-engine"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = []


[tool.pyright]
# ...
venvPath = "."
venv = ".venv"

[dependency-groups]
dev = [
    "black>=24.10.0",
    "deptry>=0.22.0",
    "isort>=5.13.2",
    "ruff>=0.9.1",
]
